--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Github Page demo</title>
+    <title>Bowen Shen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css"
+          integrity="sha512-kJ30H6g4NGhWopgdseRb8wTsyllFUYIx3hiUwmGAkgA9B/JbzUBDQVr2VVlWGde6sdBVOG7oU8AL35ORDuMm8g=="
+          crossorigin="anonymous"/>
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link href="css/header.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
-    <div id="main-content">
-<p>hahahaah</p>
+<header>
+    <div class="nav-container">
+        <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
+            <div class="brand-container">
+                <a class="navbar-brand nav-element" href="https://influnetics.com/">BowenShen</a></div>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#list-view">
+                <span class="btn-line1"></span>
+                <span class="btn-line2"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="list-view">
+                <ul class="nav navbar-nav nav-pills ml-auto">
+                    <li><a class="nav-element" href="Contact.html">Contact me</a></li>
+                    <li><a class="nav-element" href="About.html">About me</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
+</header>
+<main role="main">
+    <div class="mainContainer">
+        <div class="widget mainColumn">
+            <div class="widget CateBar">
+                <nav class="CateItems">
+                    <a class="category" href="">projects</a>
+                    <a class="category" href="">interesting works</a>
+                </nav>
+
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
+                            <h3>
+
+                            </h3>
+                        </div>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
