main part start

--- a/index.html
+++ b/index.html
@@ -49,10 +49,22 @@
                     <div class="widget infocards">
                         <div class="repo-title">
                             <h3>
-
+                                <a>
+                                    A Carpoolkjoijjljlk(On progress)
+                                </a>
                             </h3>
                         </div>
-                        <div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p>
+                                    dwadawdsaaaaaaaaioiiiiiii
+                                </p>
+                            </div>
+                            <div class="intro-img">
+
+                            </div>
+                        </div>
+                        <div class="interaction">
 
                         </div>
                     </div>
