--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <link href="css/header.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 </head>
@@ -64,7 +65,17 @@
 
                             </div>
                         </div>
-                        <div class="interaction">
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/CarpoolApp on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/master.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
 
                         </div>
                     </div>
