--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="nav-container">
         <nav class="navbar navbar-expand-lg navbar-light" role="navigation">
             <div class="brand-container">
-                <a class="navbar-brand nav-element" href="https://influnetics.com/">BowenShen</a></div>
+                <a class="navbar-brand nav-element" href="https://github.com/Breten6">BowenShen</a></div>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#list-view">
                 <span class="btn-line1"></span>
                 <span class="btn-line2"></span>
@@ -49,16 +49,53 @@
                 <div class="listinfo">
                     <div class="widget infocards">
                         <div class="repo-title">
-                            <h3>
-                                <a>
-                                    A Carpoolkjoijjljlk(On progress)
-                                </a>
-                            </h3>
+                            <a class="repo-title-link" href="https://influnetics.com" target="_blank">
+                                Influnetics.com(Private)
+                            </a>
                         </div>
                         <div class="intro-container">
                             <div class="intro-text">
-                                <p>
-                                    dwadawdsaaaaaaaaioiiiiiii
+                                <p class="intro">
+                                    Project when working for Influnetics Inc, rewrite influnetics.com instead of using WordPress. Used PHP to send email
+                                </p>
+                            </div>
+                            <div class="intro-img">
+
+                            </div>
+                        </div>
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/Influnetics"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/Influnetics on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/Breten6/fork"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/Breten6 on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/main.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
+                            <a class="repo-title-link" href="https://influnetics.com" target="_blank">
+                                A Carpool platform(on progress)
+                            </a>
+                        </div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p class="intro">
+                                    Me and my friend Felix planned to develop a carpool platform during quarantine.
+                                    Already finished project proposal.
                                 </p>
                             </div>
                             <div class="intro-img">
@@ -72,11 +109,53 @@
                                data-icon="octicon-star" data-size="large" data-show-count="true"
                                aria-label="Star Breten6/CarpoolApp on GitHub">Star</a>
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/master.zip"
+                            <a class="github-button" href="https://github.com/Breten6/Breten6/fork"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/Breten6 on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/main.zip"
                                data-color-scheme="no-preference: dark; light: dark; dark: light;"
                                data-icon="octicon-download" data-size="large"
                                aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
+                            <a class="repo-title-link" href="https://influnetics.com" target="_blank">
+                                A House sublet platform(on progress)
+                            </a>
+                        </div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p class="intro">
+                                    A House sublet platform designed for students while COVID. Used Java for server.
+                                </p>
+                            </div>
+                            <div class="intro-img">
 
+                            </div>
+                        </div>
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/CarpoolApp on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/Breten6/fork"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/Breten6 on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/main.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
                         </div>
                     </div>
                 </div>
