--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                         <div class="intro-container">
                             <div class="intro-text">
                                 <p class="intro">
-                                    Project when working for Influnetics Inc, rewrite influnetics.com instead of using WordPress. Used PHP to send email
+                                    Project when working for Influnetics Inc, rewrite influnetics.com instead of using
+                                    WordPress. Used PHP to send email
                                 </p>
                             </div>
-                            <div class="intro-img">
+                            <div class="intro-img influ-img">
 
                             </div>
                         </div>
@@ -98,7 +99,7 @@
                                     Already finished project proposal.
                                 </p>
                             </div>
-                            <div class="intro-img">
+                            <div class="intro-img carpool-img">
 
                             </div>
                         </div>
@@ -136,26 +137,25 @@
                                     A House sublet platform designed for students while COVID. Used Java for server.
                                 </p>
                             </div>
-                            <div class="intro-img">
+                            <div class="intro-img house-img">
 
                             </div>
                         </div>
                         <div class="repo-tags">
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp"
-                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
-                               data-icon="octicon-star" data-size="large" data-show-count="true"
-                               aria-label="Star Breten6/CarpoolApp on GitHub">Star</a>
-                            <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/Breten6/fork"
+                            <a class="github-button" href="https://github.com/Breten6/Sublet"
                                data-color-scheme="no-preference: light; light: dark; dark: dark;"
-                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
-                               aria-label="Fork Breten6/Breten6 on GitHub">Fork</a>
+                               data-icon="octicon-star" data-show-count="true" data-size="large"
+                               aria-label="Star Breten6/Sublet on GitHub">Star</a>
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/CarpoolApp/archive/main.zip"
-                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
-                               data-icon="octicon-download" data-size="large"
-                               aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
+                            <a class="github-button" href="https://github.com/Breten6/Sublet/fork"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-show-count="true" data-size="large"
+                               aria-label="Fork Breten6/Sublet on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/Sublet/archive/master.zip"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;" data-size="large"
+                               data-icon="octicon-download" aria-label="Download Breten6/Sublet on GitHub">Download</a>
                         </div>
                     </div>
                 </div>
