send email on static page

--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <link href="css/header.css" rel="stylesheet">
-        <script src="js/msn.js"></script>
+        <!-- <script src="js/msn.js"></script> -->
         <link rel="stylesheet" href="css/Contact.css">
     </head>
     <body>
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div  id="right_container">
-            <form class="contact-form">
+            <form class="contact-form" action="http://formspree.io/you@email.com">
                 <input type="email" class="name_and_email" name="email" placeholder="Your Email" required="required"><br>
                 <textarea rows="6" type="text" class="name_and_email" id="message" name="message"  placeholder="Message"></textarea><br>
                 <button type="submit" id="submit_button">
