--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div  id="right_container">
-            <form class="contact-form" action="http://formspree.io/you@email.com" method="POST">
+            <form class="contact-form" action="http://formspree.io/bowen8shen@gmail.com" method="POST">
                 <input type="email" class="name_and_email" name="email" placeholder="Your Email" required="required"><br>
                 <textarea rows="6" type="text" class="name_and_email" id="message" name="message"  placeholder="Message"></textarea><br>
                 <button type="submit" id="submit_button">
