--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <script src="js/msn.js"></script>
     <link href="css/header.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?06547de7dc09856e73f5d854a45bc733";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body>
 <header>
