--- a/index.html
+++ b/index.html
@@ -59,6 +59,45 @@ var _hmt = _hmt || [];
                 <div class="listinfo">
                     <div class="widget infocards">
                         <div class="repo-title">
+                            <a class="repo-title-link" href="https://github.com/Breten6/MIT6.824" target="_blank">
+                                MIT 6.824 lab1 and lab2
+                            </a>
+                        </div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p class="intro">
+                                    MIT 6.824 Distributed System labs. 
+                                    (Hope I can complete four labs before I graduate)
+                                </p>
+                            </div>
+                            <div class="intro-img mit-img">
+
+                            </div>
+                        </div>
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/MIT6.824"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/CarpoolApp on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/MIT6.824"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/Breten6 on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/MIT6.824/archive/refs/heads/main.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/CarpoolApp on GitHub">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
                             <a class="repo-title-link" href="https://github.com/Breten6/Sublet" target="_blank">
                                 A House sublet platform(on progress)
                             </a>
