--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var _hmt = _hmt || [];
                                     A C++ Reactor framework allowing millions of concurrent 
                                 </p>
                             </div>
-                            <div class="intro-img hd-img">
+                            <div class="intro-img">
 
                             </div>
                         </div>
