--- a/index.html
+++ b/index.html
@@ -135,6 +135,82 @@ var _hmt = _hmt || [];
                 <div class="listinfo">
                     <div class="widget infocards">
                         <div class="repo-title">
+                            <a class="repo-title-link" href="https://github.com/Breten6/myRTOS" target="_blank">
+                                A Real time Operatime system.
+                            </a>
+                        </div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p class="intro">
+                                    ece 350 Real-time operating system lab
+                                </p>
+                            </div>
+                            <div class="intro-img">
+                                
+                            </div>
+                        </div>
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/myRTOS"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/MyReactor on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/myRTOS"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/MyReactor on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/myRTOS/archive/refs/heads/main.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/MyReactor on GitHub">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
+                            <a class="repo-title-link" href="https://github.com/Breten6/WAVE" target="_blank">
+                                WAVE: Smart HomeKit Using Hand Gestures 
+                            </a>
+                        </div>
+                        <div class="intro-container">
+                            <div class="intro-text">
+                                <p class="intro">
+                                    WAVE: Smart HomeKit Using Hand Gestures uses innovative image processing techniques to recognize user gestures, ensuring an intuitive experience. 
+                                </p>
+                            </div>
+                            <div class="intro-img hd-img">
+
+                            </div>
+                        </div>
+                        <div class="repo-tags">
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/WAVE"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-star" data-size="large" data-show-count="true"
+                               aria-label="Star Breten6/WAVE on GitHub">Star</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/WAVE"
+                               data-color-scheme="no-preference: light; light: dark; dark: dark;"
+                               data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
+                               aria-label="Fork Breten6/WAVE on GitHub">Fork</a>
+                            <!-- Place this tag where you want the button to render. -->
+                            <a class="github-button" href="https://github.com/Breten6/WAVE/archive/refs/heads/main.zip"
+                               data-color-scheme="no-preference: dark; light: dark; dark: light;"
+                               data-icon="octicon-download" data-size="large"
+                               aria-label="Download Breten6/WAVE on GitHub">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="BasicInfo">
+                <div class="listinfo">
+                    <div class="widget infocards">
+                        <div class="repo-title">
                             <a class="repo-title-link" href="https://github.com/Breten6/MIT6.824" target="_blank">
                                 MIT 6.824 lab1 and lab2
                             </a>
