--- a/index.html
+++ b/index.html
@@ -173,33 +173,33 @@ var _hmt = _hmt || [];
                 <div class="listinfo">
                     <div class="widget infocards">
                         <div class="repo-title">
-                            <a class="repo-title-link" href="https://github.com/Breten6/WAVE" target="_blank">
-                                WAVE: Smart HomeKit Using Hand Gestures 
+                            <a class="repo-title-link" href="https://github.com/Breten6/CPU" target="_blank">
+                                Single-cycle pipelining CPU
                             </a>
                         </div>
                         <div class="intro-container">
                             <div class="intro-text">
                                 <p class="intro">
-                                    WAVE: Smart HomeKit Using Hand Gestures uses innovative image processing techniques to recognize user gestures, ensuring an intuitive experience. 
+                                    A Single-cycle pipelining CPU implemented by Verilog. The CPU has five stages: Fetch, Encode, Excute, Memory, and Write back.
                                 </p>
                             </div>
-                            <div class="intro-img hd-img">
+                            <div class="intro-img cpu-img">
 
                             </div>
                         </div>
                         <div class="repo-tags">
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/WAVE"
+                            <a class="github-button" href="https://github.com/Breten6/CPU"
                                data-color-scheme="no-preference: dark; light: dark; dark: light;"
                                data-icon="octicon-star" data-size="large" data-show-count="true"
                                aria-label="Star Breten6/WAVE on GitHub">Star</a>
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/WAVE"
+                            <a class="github-button" href="https://github.com/Breten6/CPU"
                                data-color-scheme="no-preference: light; light: dark; dark: dark;"
                                data-icon="octicon-repo-forked" data-size="large" data-show-count="true"
                                aria-label="Fork Breten6/WAVE on GitHub">Fork</a>
                             <!-- Place this tag where you want the button to render. -->
-                            <a class="github-button" href="https://github.com/Breten6/WAVE/archive/refs/heads/main.zip"
+                            <a class="github-button" href="https://github.com/Breten6/CPU/archive/refs/heads/main.zip"
                                data-color-scheme="no-preference: dark; light: dark; dark: light;"
                                data-icon="octicon-download" data-size="large"
                                aria-label="Download Breten6/WAVE on GitHub">Download</a>
