--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ var _hmt = _hmt || [];
                         <div class="intro-container">
                             <div class="intro-text">
                                 <p class="intro">
-                                    I have a good idea on for a mmorpg or a moba game, tying in social and commbat, let's start with a server with very high throughput
+                                    I have a good idea on for a mmorpg or a moba game, tying in social and commbat, let's start with a server
                                 </p>
                             </div>
                             <div class="intro-img">
